Agregar configuración de homepage en package.json y refactorizar App.js a clase con estado y formulario de edición

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-proyecto",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/DWEC/UT05/Tarea5_3_1/react/build",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
